modules/control/http/mvar.c:453: Memory leak: psz
In file modules/control/http/mvar.c:453: Variable psz seems to be leaking memory. I noticed that you have a FIXME comment there already, but the FIXME comment seems quite unsure and below this one in the same "switch", there it is another similar leak.
Perhaps better fix them as the switch-case is inside a for loop (not sure how many times is runs).
case VLC_VAR_STRING:
itm = mvar_New( name, "set" );
/* FIXME: Memory leak here?? (remove strdup?) */
psz = strdup( text_list.p_list->p_values[i].psz_string );
mvar_AppendNewVar( itm, "name", psz );
mvar_AppendNewVar( itm, "id", val_list.p_list->p_values[i].psz_string );
snprintf( psz_int, sizeof(psz_int), "%d",
( !strcmp( val.psz_string,
val_list.p_list->p_values[i].psz_string )
&& !( i_type & VLC_VAR_ISCOMMAND ) ) );
mvar_AppendNewVar( itm, "selected", psz_int );
mvar_AppendVar( s, itm );
break;
This bug was found by cppcheck: http://cppcheck.wiki.sourceforge.net/